--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-test-renderer": "^17.0.2",
     "redux": "^4.1.1",
     "redux-thunk": "^2.3.0",
     "reselect": "^4.1.2",
@@ -54,6 +55,7 @@
     ]
   },
   "devDependencies": {
-    "@types/react-router-dom": "^5.1.8"
+    "@types/react-router-dom": "^5.1.8",
+    "@types/react-test-renderer": "^17.0.1"
   }
 }
