--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@types/react-dom": "^17.0.0",
     "@types/react-redux": "^7.1.18",
     "axios": "^0.21.4",
+    "classnames": "^2.3.1",
     "formik": "^2.2.9",
     "gh-pages": "^3.2.3",
+    "npm": "^8.1.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.5",
